Bug 930625 - Fix some exact rooting hazards in spidermonkey; r=sfink